# Leave-Policy-Chatbot-Backend

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: chatbot.py  data_loader.py  prompt.py
vectorstore/: vectordb.py
